{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 208,
  "lineage": "8b75f764-3084-78b8-ab27-a1981f7f9bca",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "IE_aws_alb",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:786744198328:loadbalancer/app/IE-alb/73376c0c613357e1",
            "arn_suffix": "app/IE-alb/73376c0c613357e1",
            "dns_name": "IE-alb-1710511502.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:786744198328:loadbalancer/app/IE-alb/73376c0c613357e1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "IE-alb",
            "security_groups": [
              "sg-015b8d15af14e2b4c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05bdc86c6737fe943"
              },
              {
                "subnet_id": "subnet-081e6e883d960fbec"
              }
            ],
            "subnets": [
              "subnet-05bdc86c6737fe943",
              "subnet-081e6e883d960fbec"
            ],
            "tags": {
              "name": "IE-alb"
            },
            "tags_all": {
              "name": "IE-alb"
            },
            "vpc_id": "vpc-09f845ba22bd511bd",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.alb.aws_security_group.IE_alb_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "IE_alb_listener",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:786744198328:listener/app/IE-alb/73376c0c613357e1/5d6833ad37db73f2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:786744198328:targetgroup/IE-tg-1/36c21e34af154512",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:786744198328:listener/app/IE-alb/73376c0c613357e1/5d6833ad37db73f2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:786744198328:loadbalancer/app/IE-alb/73376c0c613357e1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.IE_aws_alb",
            "module.alb.aws_lb_target_group.IE_target_group",
            "module.alb.aws_security_group.IE_alb_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "IE_target_group",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:786744198328:targetgroup/IE-tg-1/36c21e34af154512",
            "arn_suffix": "targetgroup/IE-tg-1/36c21e34af154512",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:786744198328:targetgroup/IE-tg-1/36c21e34af154512",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "IE-tg-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09f845ba22bd511bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "IE_tg_attach1",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:786744198328:targetgroup/IE-tg-1/36c21e34af154512-20211211070434886600000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:786744198328:targetgroup/IE-tg-1/36c21e34af154512",
            "target_id": "i-0369b2abbc0ee60b7"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.IE_target_group",
            "module.ec2.aws_instance.IEinstance",
            "module.ec2.aws_key_pair.IEkeys",
            "module.ec2.data.template_file.init",
            "module.vpc.aws_security_group.IEsg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "IE_tg_attach2",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:786744198328:targetgroup/IE-tg-1/36c21e34af154512-20211211070434933000000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:786744198328:targetgroup/IE-tg-1/36c21e34af154512",
            "target_id": "i-079c09820678ae98c"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.IE_target_group",
            "module.ec2.aws_instance.IEinstance",
            "module.ec2.aws_key_pair.IEkeys",
            "module.ec2.data.template_file.init",
            "module.vpc.aws_security_group.IEsg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "IE_alb_sg",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:786744198328:security-group/sg-015b8d15af14e2b4c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-015b8d15af14e2b4c",
            "ingress": [],
            "name": "IE-alb-sg",
            "name_prefix": "",
            "owner_id": "786744198328",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09f845ba22bd511bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_http",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2081943683",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-015b8d15af14e2b4c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.IE_alb_sg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_all",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4203818203",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-015b8d15af14e2b4c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.IE_alb_sg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "IEinstance",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09889d8d54f9e0a0e",
            "arn": "arn:aws:ec2:us-west-2:786744198328:instance/i-079c09820678ae98c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-079c09820678ae98c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "IEkeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04038363fd9040eb8",
            "private_dns": "ip-10-0-1-6.us-west-2.compute.internal",
            "private_ip": "10.0.1.6",
            "public_dns": "ec2-54-188-151-54.us-west-2.compute.amazonaws.com",
            "public_ip": "54.188.151.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04a5a72c121c7dec9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05bdc86c6737fe943",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb018817b09f1ee2"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.IEkeys",
            "module.ec2.data.template_file.init",
            "module.vpc.aws_security_group.IEsg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09889d8d54f9e0a0e",
            "arn": "arn:aws:ec2:us-west-2:786744198328:instance/i-0369b2abbc0ee60b7",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0369b2abbc0ee60b7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "IEkeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0419066561f48de69",
            "private_dns": "ip-10-0-2-15.us-west-2.compute.internal",
            "private_ip": "10.0.2.15",
            "public_dns": "ec2-54-213-221-141.us-west-2.compute.amazonaws.com",
            "public_ip": "54.213.221.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05f1f3231768ea372",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081e6e883d960fbec",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb018817b09f1ee2"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.IEkeys",
            "module.ec2.data.template_file.init",
            "module.vpc.aws_security_group.IEsg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:786744198328:route-table/rtb-0f8b3263fb16a84ee",
            "default_route_table_id": "rtb-0f8b3263fb16a84ee",
            "id": "rtb-0f8b3263fb16a84ee",
            "owner_id": "786744198328",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "IEPrivRouteTab"
            },
            "tags_all": {
              "Name": "IEPrivRouteTab"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f845ba22bd511bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IEgw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:786744198328:internet-gateway/igw-0f3a58aee14110d6f",
            "id": "igw-0f3a58aee14110d6f",
            "owner_id": "786744198328",
            "tags": {
              "Name": "IEgw"
            },
            "tags_all": {
              "Name": "IEgw"
            },
            "vpc_id": "vpc-09f845ba22bd511bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:786744198328:route-table/rtb-01003529536136458",
            "id": "rtb-01003529536136458",
            "owner_id": "786744198328",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f3a58aee14110d6f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "IEPubRouteTab"
            },
            "tags_all": {
              "Name": "IEPubRouteTab"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f845ba22bd511bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.IEgw",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_ass",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abe077937d1fb5ed",
            "route_table_id": "rtb-0f8b3263fb16a84ee",
            "subnet_id": "subnet-0d127eedaae08ed5b"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.private_route",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e645f28da521d137",
            "route_table_id": "rtb-0f8b3263fb16a84ee",
            "subnet_id": "subnet-0af2dea64a9c902aa"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.private_route",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_ass",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04848c2172d65c1ae",
            "route_table_id": "rtb-01003529536136458",
            "subnet_id": "subnet-05bdc86c6737fe943"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IEgw",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d9ac1fd9bf87d7d",
            "route_table_id": "rtb-01003529536136458",
            "subnet_id": "subnet-081e6e883d960fbec"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IEgw",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "IEsg",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:786744198328:security-group/sg-0eb018817b09f1ee2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0eb018817b09f1ee2",
            "ingress": [],
            "name": "IEsg",
            "name_prefix": "",
            "owner_id": "786744198328",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09f845ba22bd511bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_outbound_access",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4007579335",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0eb018817b09f1ee2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.IEsg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "grafana_inbound_access",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3000,
            "id": "sgrule-1687355471",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eb018817b09f1ee2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.IEsg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_inbound_access",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2824006178",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eb018817b09f1ee2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.IEsg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_exporter_inbound_access",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 9100,
            "id": "sgrule-1227003712",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eb018817b09f1ee2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9100,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.IEsg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "prometheus_inbound_access",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 9090,
            "id": "sgrule-760096694",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eb018817b09f1ee2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9090,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.IEsg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_inbound_access",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-517519255",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eb018817b09f1ee2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.IEsg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "upnp_inbound_access",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 5000,
            "id": "sgrule-2441431735",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eb018817b09f1ee2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.IEsg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:786744198328:subnet/subnet-0d127eedaae08ed5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d127eedaae08ed5b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "786744198328",
            "tags": {
              "Name": "IEPrivSubnet.1"
            },
            "tags_all": {
              "Name": "IEPrivSubnet.1"
            },
            "vpc_id": "vpc-09f845ba22bd511bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:786744198328:subnet/subnet-0af2dea64a9c902aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0af2dea64a9c902aa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "786744198328",
            "tags": {
              "Name": "IEPrivSubnet.2"
            },
            "tags_all": {
              "Name": "IEPrivSubnet.2"
            },
            "vpc_id": "vpc-09f845ba22bd511bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:786744198328:subnet/subnet-05bdc86c6737fe943",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05bdc86c6737fe943",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "786744198328",
            "tags": {
              "Name": "IEPubSubnet.1"
            },
            "tags_all": {
              "Name": "IEPubSubnet.1"
            },
            "vpc_id": "vpc-09f845ba22bd511bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:786744198328:subnet/subnet-081e6e883d960fbec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-081e6e883d960fbec",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "786744198328",
            "tags": {
              "Name": "IEPubSubnet.2"
            },
            "tags_all": {
              "Name": "IEPubSubnet.2"
            },
            "vpc_id": "vpc-09f845ba22bd511bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "IEvpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:786744198328:vpc/vpc-09f845ba22bd511bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c853cc794f6b8482",
            "default_route_table_id": "rtb-0f8b3263fb16a84ee",
            "default_security_group_id": "sg-0fc42d72529198fc2",
            "dhcp_options_id": "dopt-735c5b0a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09f845ba22bd511bd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f8b3263fb16a84ee",
            "owner_id": "786744198328",
            "tags": {
              "Name": "IEvpc"
            },
            "tags_all": {
              "Name": "IEvpc"
            }
          }
        }
      ]
    }
  ]
}